[package]
name = "rust-opengl"
version = "0.1.0"
authors = ["Masaharu TASHIRO <masatsr.kit@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = "0.34.2"
color-rs = "0.5.0"
rusttype = "0.9.2"
thiserror = "1.0.20"
image = "0.23.12"
gl = "0.14.0"
cgmath = "0.17.0"
c_str_macro = "1.0.2"
